[package]
name = "dbang"
version = "0.1.7"
edition = "2021"
authors = ["linux_china <libing.chen@gmail.com>"]
description = "CLI to manage Deno scripts"
keywords = ["dbang", "deno"]
categories = ["command-line-utilities"]
documentation = "https://dbang.dev"
readme = "README.md"
homepage = "https://dbang.dev"
repository = "https://github.com/dbangdev/dbang"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dbang-shim"
path = "src/dbang-shim.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"
colored_json = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = "3.1"
clap_complete = "3.1"
chrono = "0.4"
regex = "1"
dirs = "4"
symlink = "0.1"
which = "4"
anyhow = "1.0"
zip = "0.6"
update-informer = { version = "0.5", default_features = false, features = ["github"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
